@@ -2,6 +2,8 @@ Changelog for Writer2LaTeX version 1.0 -> 1.2
 
 ---------- version 1.1.9 ----------
 
+[w2l] The StarMath converter now leaves out the \text command if the argument is a plain number 
+
 [w2l] Properly detect and ignore empty formulas (avoiding any occurrences of $ $ in the document)
 
 [w2l] The StarMath converter now avoids redundant braces
